src/scss/_global.scss
/* ... */
.grid-pick-me{
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: 50rem 40rem 50rem;
    overflow: auto;
    padding: 7rem 0 12rem;
    gap: 3rem;
}

.grid-pick-me-text-1{
    grid-row-start: 1;
    grid-row-end: 2;
    grid-column-start: 2;
    grid-column-end: 4;
}
.grid-pick-me-text-2{
    grid-row-start: 2;
    grid-row-end: 3;
    grid-column-start: 1;
    grid-column-end: 2;
}
.grid-pick-me-text-3{
    grid-row-start: 3;
    grid-row-end: 4;
    grid-column-start: 3;
    grid-column-end: 4;
}
.grid-pick-me-img-1{
    grid-row-start: 1;
    grid-row-end: 2;
    grid-column-start: 1;
    grid-column-end: 2;

}
.grid-pick-me-img-2{
    grid-row-start: 2;
    grid-row-end: 3;
    grid-column-start: 2;
    grid-column-end: 4;
}


.grid-pick-me-img-3{
    grid-row-start: 3;
    grid-row-end: 4;
    grid-column-start: 1;
    grid-column-end: 3;
}
.grid-text-big-spacing{
    padding: clamp(9rem, 0.59rem + 8.469vw, 11.6rem) clamp(6rem, 0.501rem + 5.537vw, 7.7rem);
}

.grid-text-mid-spacing{
    padding: clamp(3rem, -5.086rem + 8.143vw, 5.5rem) clamp(2rem, -3.499rem + 5.537vw, 3.7rem);
}
.grid-text-title{
    font-size: 2.2rem;
    color: aqua;
}

// rsps
.grid-rsps{
    display: grid;
    grid-template-columns: repeat(4,1fr);
    grid-template-rows: repeat(3,32rem);
    column-gap: 5rem;
    row-gap: 10rem;
}

.visit-website{
    padding: 1rem 1.7rem;
    color: $white;
    font-size: 1.4rem;
}

.button-purple{
    background-color: $purple;
}
.button-purple:hover{
    background-color: $darker-purple;
}
.button-aqua{
    background-color: $aqua;
}

.button-aqua:hover{
    background-color: $aqua-muted;
}


.width-percent-60{
    width: 60%;
}
.width-percent-70{
    width: 70%;
}

// contact page
.form-container {
    //- DONT DELETE display: none removes it until form function is implemented
    display: none;
    width: 100%;
    max-width: 400px;
    padding: 20px;
    background: $white;
    border: 1px solid $form-border-grey;
    border-radius: 5px;
    box-shadow: 0 4px 8px $box-shadow-grey;
}

.contact-form {
    display: flex; 
    flex-direction: column;
    gap: 20px;
}

.form-group {
    position: relative;
}

label {
    display: block;
    margin-bottom: 5px;
    font-size: 14px;
    color: $dark-grey;
}

input,
textarea {
    width: 100%;
    padding: 10px;
    font-size: 14px;
    border: 1px solid $input-grey;
    border-radius: 4px;
    box-sizing: border-box;
    background: $white;
    &:focus {   
        &::placeholder {
          color: $darker-grey; 
          opacity: 0.5; 
        }
    }
}

textarea {
    resize: none;
    height: 100px;
}

input:focus,
textarea:focus {
    border-color: $aqua;
    outline: none;
}

.required-star {
    position: absolute;
    top: 50%;
    right: 10px;
    transform: translateY(-25%);
    color: $red;
    font-size: 16px;
}

.required-star-text-area {
    position: absolute;
    top: 50%;
    right: 10px;
    transform: translateY(-200%);
    color: $red;
    font-size: 16px;
}


.icon-envelope {
    position: absolute;
    top: 50%;
    right: 30px;
    transform: translateY(-50%);
    color: $darker-grey;
}

button {
    padding: 10px 20px;
    font-size: 14px;
    color: #fff;
    background: $aqua;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: background 0.3s ease;
}

button:hover {
    background: $aqua-muted;
}

input.error,
textarea.error {
  border-color: red;
}
.font-size-16-15{
    font-size: clamp(1.5rem, 1.177rem + 0.326vw, 1.6rem);
}
@media screen and (max-width: 993px) {
	nav {
		>a {
			display: none;
		}
	}
	.modal-button {
		display: flex;
	}
    .grid-pick-me{
        display: flex;
        flex-direction: column;
    }
    .grid-pick-me-img-1,
    .grid-pick-me-img-2,
    .grid-pick-me-img-3{
        height: 17rem;
    }

    .grid-pick-me-text-1,
    .grid-pick-me-text-2,
    .grid-pick-me-text-3{
        height: auto;
    }
    
    .grid-text-mid-spacing{
        padding: 5.5rem 3.7rem;
    }
    .grid-text-big-spacing{
        padding: 11.6rem 7.7rem;
    }

    .font-size-16-15{
        font-size: 1.6rem;
    }
    

}
@media screen and (max-width: 777px) {
	.middle-section-thin {
		flex-direction: column;
	}
	.middle-section-rebuttal {
		flex-direction: column;
	}
	.data-inner {
		flex-direction: column;
		>.data-col-2 {
			display: none;
		}
	}
	.bottom-bar {
		flex-direction: column;
	}

    .flex-row-equal{
        flex-direction: column;
    }

    .grid-rsps{
        display: flex;
        flex-direction: column;
    }

    .grid-rsps-item>img{
        height: 20rem;
        width: 30rem;
    }

    .connect-world{
        gap: 7.5rem;
        padding: 9rem clamp(0rem, -6.465rem + 13.468vw, 4rem)
    }

    .mobile-text-center{
        text-align: center;
    }

    .indigo-strip-padding{
        gap: 2rem;
    }
    .width-percent-60{
        width: 100%;
    }
    .width-percent-70{
        width: 100%;
    }

    .grid-our-services{
        display: flex;
        flex-direction: column;
    }

 
}

@media screen and (max-width: 480px) {


}

